# dt2-assignment-3

./: .gitignore  README.md  pyproject.toml
chatbot_comparison/: README.md  build_prompt.py  chatgpt_web.csv  claude_opus47_desktop.csv  ollama_llama31.csv  prompt.md  score_chatbot.py
chronos2_assessment/: baselines.py  chronos_runner.py  data_loader.py  interfaces.py  metrics.py  plots.py  run_one.py
data/processed/: bike_share_hourly.parquet
notebooks/: 00_sanity_check.ipynb  01_data_exploration.ipynb  02_main_experiment.ipynb  03_report.ipynb
outputs/: report.html
outputs/forecasts/: auto_arima.json  auto_arima.parquet  chatgpt_web.json  chatgpt_web.parquet  chronos2_covariates.json  chronos2_covariates.parquet  chronos2_univariate.json  chronos2_univariate.parquet  claude_opus47_desktop.json  claude_opus47_desktop.parquet  lightgbm.json  lightgbm.parquet  ollama_llama31.json  ollama_llama31.parquet  prophet.json  prophet.parquet  prophet_weather.json  prophet_weather.parquet  seasonal_naive.json  seasonal_naive.parquet
outputs/tables/: metrics.csv  metrics.md
scripts/: render_html.sh
tests/: test_interface_contract.py  test_metrics.py
