[project]
name = "chronos2-assessment"
version = "0.1.0"
description = "DT2 niche GenAI assignment — Chronos-2 time-series foundation model assessment"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chronos-forecasting",
    "statsforecast",
    "prophet",
    "lightgbm",
    "pandas",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "ucimlrepo",
    "jupyter",
    "nbconvert",
    "ipykernel",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronos2_assessment"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
